<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.attendance.AttendanceFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_identity_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profile_photo"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:text="Nanda Arya Putra"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/iv_profile_photo"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="24dp"
                android:text="21106050048"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/iv_profile_photo"
                app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_day_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_date_format"
        android:textSize="20sp"
        android:layout_margin="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_identity_layout" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lt_working_animation"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="16dp"
        android:layout_centerHorizontal="true"
        app:lottie_autoPlay="true"
        app:lottie_fileName="workingAnimation.json"
        app:lottie_loop="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_day_date"/>

    <TextView
        android:id="@+id/tv_clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_time"
        android:textSize="30sp"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lt_working_animation" />

    <TextView
        android:id="@+id/tv_ClockIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Clock In Time: \n --:--"
        android:textSize="20sp"
        android:layout_marginVertical="18dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_ClockIn"
        app:layout_constraintStart_toStartOf="@+id/btn_ClockIn"
        app:layout_constraintTop_toBottomOf="@+id/tv_clock" />

    <TextView
        android:id="@+id/tv_ClockOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Clock out Time: \n --:--"
        android:textSize="20sp"
        android:layout_marginVertical="18dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_ClockOut"
        app:layout_constraintStart_toStartOf="@+id/btn_ClockOut"
        app:layout_constraintTop_toBottomOf="@+id/tv_clock" />

    <Button
        android:id="@+id/btn_ClockIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:enabled="false"
        android:text="@string/clock_in"
        app:layout_constraintEnd_toStartOf="@id/btn_ClockOut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ClockIn" />

    <Button
        android:id="@+id/btn_ClockOut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:enabled="false"
        android:text="@string/clock_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_ClockIn"
        app:layout_constraintTop_toBottomOf="@+id/tv_ClockOut" />

</androidx.constraintlayout.widget.ConstraintLayout>